# django-firebase-test

./: pyproject.toml
mysite/: settings.py  urls.py
users/: models.py
users/migrations/: 0001_initial.py  0002_user_delete_myuser.py
