[tool.poetry]
name = "django-auth-test"
version = "0.1.0"
description = ""
authors = ["Vykintas Baltrušaitis <vykintas.baltrusaitis@reef.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
django-firebase-auth = {path = "../django-firebase-auth", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
